--- a/src/com/fudan/sw/dsa/project2/utilities/index.html
+++ b/src/com/fudan/sw/dsa/project2/utilities/index.html
@@ -1,3 +1,4 @@
+<#assign baseUrl=request.getContextPath()>
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,6 +10,10 @@
             height: 100%;
             overflow: hidden;
             margin: 0;
+        }
+
+        .BMapLabel {
+            max-width: fit-content;
         }
     </style>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
@@ -31,7 +36,7 @@
         </div>
         <div class="col-md-9">
             <div class="embed-responsive embed-responsive-4by3">
-                <div class="embed-responsive-item well well-lg" id="allmap"></div>
+                <div class="embed-responsive-item" id="allmap"></div>
             </div>
         </div>
         <div class="col-md-3">
@@ -82,12 +87,9 @@
                         </ul>
                         <input class="btn btn-success" onclick="clickButton()" type="button" value="查询">
                     </form>
-                    <br/>
-                    <div style="height: 60%">
-                        <span style="font-size:18px;position:relative;">display the result:</span><br/>
-                        <div id="resultDiv"
-                             style="background-color:#F5F5F5;width: 90%;height:90%;font-size:18px;word-wrap: break-word; ">
-
+                    <div class="panel panel-info">
+                        <div class="panel-heading">display the result:</div>
+                        <div id="resultDiv" style="font-size:18px;word-wrap:break-word;">
                         </div>
                     </div>
                 </div>
